--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@flaticon/flaticon-uicons": "^3.1.0",
+    "axios": "^1.6.7",
     "vue": "^3.4.15"
   },
   "devDependencies": {
